[add] api.addTeamInfo() [update] go version 1.19 migration
